# neural-network-rust

./: Cargo.toml  README.md  analysis.txt
networks/misc/: mnist_018.18_2023-01-07_23-34-50_Relu(784, 128)-Softmax(128, 10)_4100795642  mnist_018.68_2023-01-07_23-34-19_Relu(784, 128)-Softmax(128, 10)_1918917727  mnist_092.15_2023-01-07_23-42-33_Relu(784, 128)-Softmax(128, 10)_3413856117  mnist_097.11_2023-01-07_23-36-51_Relu(784, 128)-Softmax(128, 10)_1500209327  mnist_097.1_2023-01-07_23-38-09_Relu(784, 128)-Softmax(128, 10)_3100789978  mnist_097.5_2023-01-07_23-53-57_Relu(784, 128)-Softmax(128, 10)_2516120590  mnist_097.62_2023-01-07_23-05-25_Relu(784, 128)-Softmax(128, 10)_3618478356  mnist_098.13_2023-01-07_23-11-45_Relu(784, 128)-Softmax(128, 10)_1909007355  mnist_098.40_2023-01-08_09-50-34_Relu(784, 256)-Softmax(256, 10)_3339896426  mnist_098.8_2023-01-07_23-25-55_Relu(784, 128)-Softmax(128, 10)_28991739
networks/relu_128_100/: mnist_097.47_2023-01-06_12-01-14_Relu(784, 128)-Softmax(128, 10)_277474863  mnist_097.55_2023-01-06_11-52-11_Relu(784, 128)-Softmax(128, 10)_2516502081  mnist_097.58_2023-01-06_12-03-23_Relu(784, 128)-Softmax(128, 10)_2224257229  mnist_097.65_2023-01-06_12-00-08_Relu(784, 128)-Softmax(128, 10)_185812780  mnist_097.67_2023-01-06_11-46-14_Relu(784, 128)-Softmax(128, 10)_3945424962  mnist_097.69_2023-01-06_11-51-46_Relu(784, 128)-Softmax(128, 10)_1919942984  mnist_097.75_2023-01-06_11-55-11_Relu(784, 128)-Softmax(128, 10)_1723890353  mnist_097.76_2023-01-06_11-33-14_Relu(784, 128)-Softmax(128, 10)_1476937167  (+92 more)
src/: main.rs
src/utils/: mod.rs  (+5 more)
(+3954 files in other folders)
